
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    >
    <include android:id="@+id/appbar"
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/appbar"
        android:background="@drawable/bottom_shadow">
        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/portfolio_textview"
                android:id="@+id/title"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/spotify_button"
                android:id="@+id/spotify_button"
                android:layout_gravity="center_horizontal"
                style="@style/CommonButton"
                android:theme="@style/CommonButton"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/scores_button"
                android:id="@+id/scores_button"
                android:layout_gravity="center_horizontal"
                style="@style/CommonButton"
                android:theme="@style/CommonButton"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/library_button"
                android:id="@+id/library_button"
                android:layout_gravity="center_horizontal"
                style="@style/CommonButton"
                android:theme="@style/CommonButton"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/build_it_button"
                android:id="@+id/build_it_button"
                android:layout_gravity="center_horizontal"
                style="@style/CommonButton"
                android:theme="@style/CommonButton"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/reader_button"
                android:id="@+id/reader_button"
                android:layout_gravity="center_horizontal"
                style="@style/CommonButton"
                android:theme="@style/CommonButton"/>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/capstone_button"
                android:id="@+id/capstone_button"
                android:layout_gravity="center_horizontal"
                style="@style/CapstoneButton"
                android:theme="@style/CapstoneButton"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

